--- a/src/features/cats/Cats/Cats.module.css
+++ b/src/features/cats/Cats/Cats.module.css
@@ -1,6 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+
 .main {
   width: 100%;
+  min-height: 100vh;
   display: flex;
+}
+
+.categoryTitle {
+  width: 50%;
 }
 
 .imgContainer {
@@ -8,17 +17,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: antiquewhite;
+}
+
+.imagesBlock {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .eachImage {
-  max-width: 100%;
-  width: 400px;
+  width: 280px;
+  height: 400px;
+  margin: 20px;
 }
 
 .categoriesContainer {
   width: 20%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
+  background-color: aqua;
+  padding: 40px;
 }
 
 .category {
