feat(CHANGE): changed the style for categories from select options to ul li

--- a/src/features/cats/Cats/Cats.module.css
+++ b/src/features/cats/Cats/Cats.module.css
@@ -42,6 +42,7 @@
 }
 
 .category {
+  list-style: none;
   margin: 2px;
 }
 
@@ -55,6 +56,11 @@
 
 .browseImages:hover {
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 @media screen and (max-width: 680px) {
